在jupyter下准确率打到1.00 的模型

--- a/pythonUsage/predict_emotion.ipynb
+++ b/pythonUsage/predict_emotion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "2.3.0\n",
-      "2.4.0 ['/home/wilson/.local/lib/python3.6/site-packages/tensorflow/keras']\n"
+      "2.4.0 ['/home/wilson/.local/lib/python3.8/site-packages/tensorflow/keras']\n"
      ]
     }
    ],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,22 +88,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
       "mobilenetv2_1.00_192 (Functi (None, 6, 6, 1280)        2257984   \n",
       "_________________________________________________________________\n",
-      "global_average_pooling2d_2 ( (None, 1280)              0         \n",
+      "global_average_pooling2d_1 ( (None, 1280)              0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 5)                 6405      \n",
+      "dense_1 (Dense)              (None, 5)                 6405      \n",
       "=================================================================\n",
       "Total params: 2,264,389\n",
       "Trainable params: 2,230,277\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -140,86 +140,86 @@
       "{'anger': 0, 'disgust': 1, 'fear': 2, 'happy': 3, 'sad': 4}\n",
       "all_image_lavels 79\n",
       "all_image_paths 79\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (16).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (22).jpg\n",
-      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (25).jpg\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (17).jpg\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (15).jpg\n",
-      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (5).jpg\n",
-      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (15).jpg\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (6).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (2).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (4).jpg\n",
-      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (24).jpg\n",
-      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (6).jpg\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (8).jpg\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (18).jpg\n",
-      "!!! predict: [2 fear/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (13).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (16).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (25).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (21).jpg\n",
-      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (6).jpg\n",
-      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (3).jpg\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (21).jpg\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (25).jpg\n",
-      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (22).jpg\n",
-      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (4).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (18).jpg\n",
-      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (4).jpg\n",
-      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (11).jpg\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (10).jpg\n",
-      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (19).jpg\n",
-      "!!! predict: [0 anger/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (8).jpg\n",
-      "predict: [1 disgust/disgust] /home/wilson/workstation/TFResFaceEmotion/emotions/disgust/disgust (2).jpg\n",
       "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (1).jpg\n",
-      "predict: [1 disgust/disgust] /home/wilson/workstation/TFResFaceEmotion/emotions/disgust/disgust (5).jpg\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (19).jpg\n",
-      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (7).jpg\n",
+      "!!! predict: [3 happy/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (11).jpg\n",
       "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (26).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (19).jpg\n",
-      "!!! predict: [4 sad/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (1).jpg\n",
-      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (27).jpg\n",
-      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (14).jpg\n",
-      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (10).jpg\n",
-      "!!! predict: [4 sad/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (14).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (14).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (3).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (12).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (9).jpg\n",
-      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (13).jpg\n",
-      "!!! predict: [3 happy/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (12).jpg\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (23).jpg\n",
-      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (9).jpg\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (5).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (27).jpg\n",
-      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (23).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (11).jpg\n",
-      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (2).jpg\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (22).jpg\n",
-      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (28).jpg\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (11).jpg\n",
-      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (2).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (23).jpg\n",
+      "!!! predict: [3 happy/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (25).jpg\n",
+      "!!! predict: [3 happy/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (7).jpg\n",
+      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (6).jpg\n",
       "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (30).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (1).jpg\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (7).jpg\n",
-      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (21).jpg\n",
-      "predict: [1 disgust/disgust] /home/wilson/workstation/TFResFaceEmotion/emotions/disgust/disgust (1).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (7).jpg\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (13).jpg\n",
-      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (11).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (28).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (26).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (24).jpg\n",
-      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (20).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (22).jpg\n",
+      "!!! predict: [3 happy/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (22).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (25).jpg\n",
+      "!!! predict: [3 happy/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (10).jpg\n",
+      "!!! predict: [2 fear/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (5).jpg\n",
+      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (4).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (27).jpg\n",
+      "!!! predict: [0 anger/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (9).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (23).jpg\n",
+      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (13).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (16).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (21).jpg\n",
       "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (7).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (18).jpg\n",
+      "!!! predict: [2 fear/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (4).jpg\n",
+      "!!! predict: [2 fear/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (3).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (8).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (24).jpg\n",
+      "!!! predict: [3 happy/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (7).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (11).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (23).jpg\n",
+      "!!! predict: [3 happy/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (20).jpg\n",
+      "!!! predict: [3 happy/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (11).jpg\n",
+      "!!! predict: [3 happy/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (13).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (6).jpg\n",
+      "!!! predict: [2 fear/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (15).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (24).jpg\n",
+      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (7).jpg\n",
+      "!!! predict: [2 fear/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (19).jpg\n",
+      "!!! predict: [2 fear/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (17).jpg\n",
+      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (3).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (5).jpg\n",
+      "!!! predict: [2 fear/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (8).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (20).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (15).jpg\n",
       "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (24).jpg\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (20).jpg\n",
-      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (9).jpg\n",
+      "!!! predict: [3 happy/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (26).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (4).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (2).jpg\n",
+      "!!! predict: [3 happy/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (14).jpg\n",
+      "!!! predict: [3 happy/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (14).jpg\n",
+      "!!! predict: [2 fear/disgust] /home/wilson/workstation/TFResFaceEmotion/emotions/disgust/disgust (5).jpg\n",
+      "!!! predict: [3 happy/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (2).jpg\n",
+      "!!! predict: [2 fear/disgust] /home/wilson/workstation/TFResFaceEmotion/emotions/disgust/disgust (1).jpg\n",
+      "!!! predict: [3 happy/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (20).jpg\n",
+      "!!! predict: [2 fear/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (22).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (25).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (21).jpg\n",
+      "!!! predict: [2 fear/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (6).jpg\n",
+      "!!! predict: [3 happy/disgust] /home/wilson/workstation/TFResFaceEmotion/emotions/disgust/disgust (2).jpg\n",
+      "!!! predict: [2 fear/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (10).jpg\n",
+      "!!! predict: [2 fear/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (18).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (9).jpg\n",
+      "!!! predict: [2 fear/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (11).jpg\n",
+      "!!! predict: [0 anger/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (13).jpg\n",
       "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (26).jpg\n",
-      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (20).jpg\n",
       "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (12).jpg\n",
-      "correct 0.9367088607594937 74/79\n"
+      "!!! predict: [3 happy/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (12).jpg\n",
+      "!!! predict: [3 happy/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (19).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (28).jpg\n",
+      "!!! predict: [3 happy/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (1).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (14).jpg\n",
+      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (12).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (23).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (19).jpg\n",
+      "!!! predict: [2 fear/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (2).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (1).jpg\n",
+      "!!! predict: [2 fear/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (28).jpg\n",
+      "!!! predict: [2 fear/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (16).jpg\n",
+      "!!! predict: [2 fear/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (27).jpg\n",
+      "!!! predict: [3 happy/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (9).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (21).jpg\n",
+      "correct 0.5063291139240507 40/79\n"
      ]
     }
    ],
@@ -248,7 +248,6 @@
     "final_ds = image_ds.batch(1)\n",
     "\n",
     "predict = model.predict(final_ds)\n",
-    "# print(\"ddddd\", predict)\n",
     "\n",
     "correct = 0\n",
     "for k in range(len(predict)):\n",
@@ -275,6 +274,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
